--- a/src/_config.yml
+++ b/src/_config.yml
@@ -11,7 +11,7 @@ title                    : "Philippe's Webpage"
 title_separator          : "-"
 name                     : &name "Philippe FERREIRA DE SOUSA"
 description              : &description "Graduate student at UC Berkeley"
-url                      : "file:///home/philippe/Documents/philippe.fdesousa.fr/src/_site" #https://philippe.fdesousa.fr # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://fdesousa.fr" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "PhilippeFerreiraDeSousa/philippe.fdesousa.fr"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
