--- a/src/_data/navigation.yml
+++ b/src/_data/navigation.yml
@@ -3,5 +3,5 @@ main:
   - title: "Teaching"
     url: /teaching/
 
-  # - title: "CV"
-  #   url: /cv/
+  - title: "Web development"
+    url: /web/
