--- a/src/_config.yml
+++ b/src/_config.yml
@@ -181,6 +181,9 @@ collections:
   web:
     output: true
     permalink: /:collection/:path/
+  ee:
+    output: true
+    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
@@ -222,6 +225,15 @@ defaults:
   - scope:
       path: ""
       type: web
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+  # _ee
+  - scope:
+      path: ""
+      type: ee
     values:
       layout: single
       author_profile: true
